--- a/sass/_theme.sass
+++ b/sass/_theme.sass
@@ -11,7 +11,8 @@
 // Variables
 //------------------------------------------------------------------------------
 @import "utilities/variables"
-@import "libraries/symbolset/standard"
+@import "symbolset/symbolset"
+@import "symbolset/ss-standard"
 
 
 // Utilities
