--- a/css/global.css
+++ b/css/global.css
@@ -470,26 +470,17 @@ table {
   border-spacing: 0;
 }
 
-/* Symbolset
-   www.symbolset.com
-   Copyright © 2012 Oak Studios LLC
+/*
+* Symbolset
+* www.symbolset.com
+* Copyright © 2012 Oak Studios LLC
 */
-@font-face {
-  font-family: "SSStandard";
-  src: url("../fonts/symbolset/ss-standard.eot");
-  src: url("../fonts/symbolset/ss-standard.eot?#iefix") format("embedded-opentype"), url("../fonts/symbolset/ss-standard.woff") format("woff"), url("../fonts/symbolset/ss-standard.ttf") format("truetype"), url("../fonts/symbolset/ss-standard.svg#SSStandard") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
-
 a.tabledrag-handle:before {
-  font-family: "SSStandard";
   font-style: normal;
   font-weight: normal;
   text-decoration: none;
   text-rendering: optimizeLegibility;
   white-space: nowrap;
-  /*-webkit-font-feature-settings: "liga"; Currently broken in Chrome >= v22. Falls back to text-rendering. Safari is unaffected. */
   -moz-font-feature-settings: "liga=1";
   -moz-font-feature-settings: "liga";
   -ms-font-feature-settings: "liga" 1;
@@ -497,12 +488,25 @@ a.tabledrag-handle:before {
   font-feature-settings: "liga";
   -webkit-font-smoothing: antialiased;
 }
+
 html:hover a.tabledrag-handle:before {
   -ms-zoom: 1;
 }
 
 a.tabledrag-handle:before {
-  content: "";
+  content: '';
+}
+
+@font-face {
+  font-family: "SSStandard";
+  src: url("../fonts/ss-standard/webfonts/ss-standard.eot");
+  src: url("../fonts/ss-standard/webfonts/ss-standard.eot?#iefix") format("embedded-opentype"), url("../fonts/ss-standard/webfonts/ss-standard.woff") format("woff"), url("../fonts/ss-standard/webfonts/ss-standard.ttf") format("truetype"), url("../fonts/ss-standard/webfonts/ss-standard.svg#SSStandard") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+a.tabledrag-handle:before {
+  font-family: "SSStandard";
 }
 
 .clearfix {
