--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,15 @@
 @charset "UTF-8";
-/* Symbolset
-   www.symbolset.com
-   Copyright © 2012 Oak Studios LLC
+/*
+* Symbolset
+* www.symbolset.com
+* Copyright © 2012 Oak Studios LLC
 */
-@font-face {
-  font-family: "SSStandard";
-  src: url("../fonts/symbolset/ss-standard.eot");
-  src: url("../fonts/symbolset/ss-standard.eot?#iefix") format("embedded-opentype"), url("../fonts/symbolset/ss-standard.woff") format("woff"), url("../fonts/symbolset/ss-standard.ttf") format("truetype"), url("../fonts/symbolset/ss-standard.svg#SSStandard") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
-
 a.button-edit:before {
-  font-family: "SSStandard";
   font-style: normal;
   font-weight: normal;
   text-decoration: none;
   text-rendering: optimizeLegibility;
   white-space: nowrap;
-  /*-webkit-font-feature-settings: "liga"; Currently broken in Chrome >= v22. Falls back to text-rendering. Safari is unaffected. */
   -moz-font-feature-settings: "liga=1";
   -moz-font-feature-settings: "liga";
   -ms-font-feature-settings: "liga" 1;
@@ -26,12 +17,25 @@ a.button-edit:before {
   font-feature-settings: "liga";
   -webkit-font-smoothing: antialiased;
 }
+
 html:hover a.button-edit:before {
   -ms-zoom: 1;
 }
 
 a.button-edit:before {
-  content: "✎";
+  content: '✎';
+}
+
+@font-face {
+  font-family: "SSStandard";
+  src: url("../fonts/ss-standard/webfonts/ss-standard.eot");
+  src: url("../fonts/ss-standard/webfonts/ss-standard.eot?#iefix") format("embedded-opentype"), url("../fonts/ss-standard/webfonts/ss-standard.woff") format("woff"), url("../fonts/ss-standard/webfonts/ss-standard.ttf") format("truetype"), url("../fonts/ss-standard/webfonts/ss-standard.svg#SSStandard") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+a.button-edit:before {
+  font-family: "SSStandard";
 }
 
 #header, #footer, #main, #content, legend, .form-actions, .form-control, .form-controls, .messages, .tasks, ul.tabs, .book-navigation, .block, .content, article, .main .block, .links {
