--- a/css/vertical-tabs.css
+++ b/css/vertical-tabs.css
@@ -1,12 +1,13 @@
 @charset "UTF-8";
-/* Symbolset
-   www.symbolset.com
-   Copyright © 2012 Oak Studios LLC
+/*
+* Symbolset
+* www.symbolset.com
+* Copyright © 2012 Oak Studios LLC
 */
 @font-face {
   font-family: "SSStandard";
-  src: url("../fonts/symbolset/ss-standard.eot");
-  src: url("../fonts/symbolset/ss-standard.eot?#iefix") format("embedded-opentype"), url("../fonts/symbolset/ss-standard.woff") format("woff"), url("../fonts/symbolset/ss-standard.ttf") format("truetype"), url("../fonts/symbolset/ss-standard.svg#SSStandard") format("svg");
+  src: url("../fonts/ss-standard/webfonts/ss-standard.eot");
+  src: url("../fonts/ss-standard/webfonts/ss-standard.eot?#iefix") format("embedded-opentype"), url("../fonts/ss-standard/webfonts/ss-standard.woff") format("woff"), url("../fonts/ss-standard/webfonts/ss-standard.ttf") format("truetype"), url("../fonts/ss-standard/webfonts/ss-standard.svg#SSStandard") format("svg");
   font-weight: normal;
   font-style: normal;
 }
