Move symbolset to libraries dir.

--- a/sass/_theme.sass
+++ b/sass/_theme.sass
@@ -11,8 +11,8 @@
 // Variables
 //------------------------------------------------------------------------------
 @import "utilities/variables"
-@import "symbolset/symbolset"
-@import "symbolset/ss-standard"
+@import "libraries/symbolset/symbolset"
+@import "libraries/symbolset/ss-standard"
 
 
 // Utilities
