--- a/sass/_theme.sass
+++ b/sass/_theme.sass
@@ -10,7 +10,17 @@
 
 // Variables
 //------------------------------------------------------------------------------
+
 @import "utilities/variables"
+
+
+// Symbolset
+// 1. Purchase font from http://symbolset.com
+// 2. Place font files in sites/all/libraries/fonts
+//------------------------------------------------------------------------------
+
+$ss-standard-dir: '../../../libraries/fonts/ss-standard/webfonts/' !default
+
 @import "libraries/symbolset/symbolset"
 @import "libraries/symbolset/ss-standard"
 
