--- a/sass/design/_variables.sass
+++ b/sass/design/_variables.sass
@@ -26,6 +26,10 @@ $link-active: lighten($link, 10%)
 $header-background: rgba(0,0,0,0.4)
 $footer-background: $header-background
 
+$selection-background: #333
+$selection-color: #fff
+$selection-link: #ccc
+
 
 // Dark Theme
 //------------------------------------------------------------------------------
