--- a/sass/drupal/_system.sass
+++ b/sass/drupal/_system.sass
@@ -163,7 +163,7 @@ table.sticky-header
 
 .container-inline
   > div, label
-    display: inline
+    display: inline-block
   .fieldset-wrapper
     display: block
 
