--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -26,7 +26,7 @@ body
 
 pre, code, kbd, samp
   font-family: $monospace
-  font-size: modular-scale(0) * 0.9
+  font-size: 0.9em
 
 a
   +link-colors($link, $link-hover, $link-active)
@@ -41,6 +41,18 @@ ul, li
   @extend %clearfix
 
 
+// Selected text
+//---------------------------------------------------------------------------
+
+::selection
+  background: $selection-background
+  color: $selection-color !important
+
+a::selection
+  background: $selection-background
+  color: $selection-color !important
+  text-decoration: underline !important
+
 // Tables
 //---------------------------------------------------------------------------
 
@@ -53,8 +65,6 @@ table, tr, td, th
 table, td, th
   border-style: solid
   border-width: 1px 0 0 1px
-thead
-  background-color: #f5f5f5
 td, th
   border-width: 0 1px 1px 0
   padding: 6px
