--- a/sass/utilities/_variables.sass
+++ b/sass/utilities/_variables.sass
@@ -5,7 +5,6 @@
 
 $experimental-support-for-khtml: false !default
 
-
 // Type
 //------------------------------------------------------------------------------
 
@@ -30,6 +29,10 @@ $monospace: $monaco !default
 $gray: #585858 !default
 $border: #eee !default
 $error: #c00 !default
+
+// Selected text
+$selection-background: #333
+$selection-color: #fff
 
 // Tabs
 $tab-background: #f5f5f5 !default
@@ -74,4 +77,4 @@ $grid-padding: 1.2em
 $show-grid-backgrounds: false
 
 // PageSlide
-$pageslide-width: 320px
+$pageslide-width: 20em
